--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.2",
+    "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
